--- a/packages/web-components/src/components/Attachment/styles.scss
+++ b/packages/web-components/src/components/Attachment/styles.scss
@@ -157,7 +157,11 @@
   height: 100%;
 
   img {
-    width: 100%;
+    display: block;
+    max-width: 100%;
+    max-height: 80vh;
+    width: auto;
+    height: auto;
     object-fit: contain;
   }
 }
@@ -236,7 +240,11 @@
 }
 
 .test-result-attachment-video {
-  width: 100%;
+  display: block;
+  max-width: 100%;
+  max-height: 80vh;
+  width: auto;
+  height: auto;
 }
 
 .imageDiffWrapper {
